--- a/strona.html
+++ b/strona.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Grabarczyk">
+    <title></title>
+    
+</head>
+<body>
+    <h1 style="color: red; text-align: center; font-style: italic; font-size: 24px; text-transform: uppercase">HURTOWNIA KOWALSKI</h1>
+    <p style="color: blue; font-size: 16px; font-family: Arial, sans-serif; font-weight: bold; text-decoration: underline; text-align: left">Charakterystyka hurtowni:</p>
+    <ul style="list-style-type: square">
+        <li>Produkty spożywcze</li>
+        <li>Artykuły gospodarstwa domowego</li>
+        <li>Elektronika</li>
+        <li>Odzież</li>
+        <li>Kosmetyki</li>
+    </ul>
+    <img src="logo_kowalski.jpg" alt="Logo Hurtowni Kowalski" width="700" height="200" style="border: 6px solid yellow">
+    <div style="background-color: #F0F0F0; text-align: center">
+        <a href="menu_kowalski.html"><img src="menu.png" alt="Menu" width="50" height="50"></a>
+        <a href="formularz_kowalski.html"><img src="formularz.png" alt="Formularz" width="50" height="50"></a>
+        <a href="tabela_kowalski.html"><img src="tabela.png" alt="Tabela" width="50" height="50"></a>
+        <a href="poczta_kowalski.html"><img src="poczta.png" alt="Poczta" width="50" height="50"></a>
+    </div>
+</body>
+</html>
