--- a/poczta.html
+++ b/poczta.html
@@ -1,1 +1,14 @@
-
+﻿<!DOCTYPE html>
+	<html lang="pl-PL">
+	<html>
+		<head>
+			<meta charset="utf-8">
+			<title> poczta Grabarczyk </title>
+		</head>
+		<body>
+	<br><br><br><br>	
+<A href ="mailto:grabarczykartur18@gmail.com">poczta_Grabarczyk</A>
+			<br><br><br><br>
+					<A HREF="index.html"> Wróć </A>
+		</body>
+</html>
