--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  			<title> </title>
 		</head>
 		<body>	
-	<A"HREF="menu.html">do menu</A> </font> <br>		
+	<A"HREF="menu.html">do menu</A><br>		
 </body>
 	</html>
