--- a/poczta.html
+++ b/poczta.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 	<br><br><br><br>	
-<A href ="mailto:grabarczykartur18@gmail.com">poczta_sklep</A>
+<A href ="mailto:grabarczykartur18@gmail.com">poczta_sklep_zoologiczny</A>
 			<br><br><br><br>
 					<A HREF="index.html"> Wróć </A>
 		</body>
