--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<head>
  			<meta charset="utf-8">
  			<title> Wykonał Grabarczyk </title>
+			  <!-- Data sprawdzianu: 2023-10-25, Uczeń: Grabarczyk -->
 		</head>
 		<body>	
 	<A HREF="menu.html">do menu</A><br>		
