--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
  			<title> </title>
 		</head>
 		<body>	
+	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 	<A HREF="formularz.html">do formluarza</A><br>			
   <A HREF="tabela.html">do tabeli</A><br>	
   <A HREF="poczta.html">do poczty</A><br>		    
