--- a/poczta.html
+++ b/poczta.html
@@ -9,6 +9,8 @@
 	<br><br><br><br>	
 <A href ="mailto:grabarczykartur18@gmail.com">poczta_sklep_zoologiczny</A>
 			<br><br><br><br>
+
+			<p>Autor: Artur Grabarczyk &copy; 2023</p>
 					<A HREF="index.html"> Wróć </A>
 		</body>
 </html>
