--- a/formularz.html
+++ b/formularz.html
@@ -7,6 +7,7 @@
 		</head>
 		<body>
 	Tutaj będzie formularz<br>	
+	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 		<A HREF="index.html"> Wróć </A>
 		</body>
 </html>
