--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,11 @@
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 	<A HREF="formularz.html">do formluarza</A><br>			
   <A HREF="tabela.html">do tabeli</A><br>	
-  <A HREF="poczta.html">do poczty</A><br>		    
+  <A HREF="poczta.html">do poczty</A><br>
+.line.beveled {
+      background: linear-gradient(90deg, #007bff, #007bff 49.5%, #ff6347 49.5%);
+      background-size: 3px 100%;
+      background-repeat: repeat-x;
+    }
 </body>
 	</html>
