--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 			  <!-- Data sprawdzianu: 2023-10-25, Uczeń: Grabarczyk -->
 		</head>
 		<body>	
+			  .line.align-right {
+      text-align: right;
+    }
 	<A HREF="menu.html">do menu</A><br>		
 <p>Autor: Artur Grabarczyk &copy; 2023</p>
 </body>
