--- a/formularz.html
+++ b/formularz.html
@@ -9,5 +9,12 @@
 	Tutaj będzie formularz<br>	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 		<A HREF="index.html"> Wróć </A>
+	    .line {
+      width: 100%;
+      height: 10px;
+      background: linear-gradient(90deg, #007bff, #007bff 33.33%, transparent 33.33%, transparent 66.67%, #ff6347 66.67%);
+      background-size: 3px 100%;
+      background-repeat: repeat-x;
+    }
 		</body>
 </html>
