--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,15 @@
 	<html>
 		<head>
  			<meta charset="utf-8">
- 			<title> </title>
+ 			<title> ZOO SKLEP</title>
+			  <style>
+    .red-text {
+      color: red;
+      text-align: center;
+      font-style: italic;
+      font-size: 36px;
+    }
+  </style>
 		</head>
 		<body>	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
