--- a/menu.html
+++ b/menu.html
@@ -23,5 +23,12 @@
       background-size: 3px 100%;
       background-repeat: repeat-x;
     }
+ <ul class="square-list">
+    <li>Składniki karmy dla zwierząt domowych.</li>
+    <li>Akcesoria i zabawki dla psów, kotów, ptaków i innych zwierząt.</li>
+    <li>Klatki i akwaria dla różnych gatunków zwierząt.</li>
+    <li>Preparaty i leki weterynaryjne.</li>
+    <li>Konsultacje i porady dotyczące opieki nad zwierzętami.</li>
+  </ul>			
 </body>
 	</html>
