--- a/menu.html
+++ b/menu.html
@@ -3,15 +3,8 @@
 	<html>
 		<head>
  			<meta charset="utf-8">
- 			<title> ZOO SKLEP</title>
-			  <style>
-    .red-text {
-      color: red;
-      text-align: center;
-      font-style: italic;
-      font-size: 36px;
-    }
-  </style>
+ 			<title> <p align="center"> <font color="red" size="50" face="Arial"> ZOO SKLEP </font> </p><i></title>
+
 		</head>
 		<body>	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
