--- a/poczta.html
+++ b/poczta.html
@@ -11,6 +11,6 @@
 			<br><br><br><br>
 
 			<p>Autor: Artur Grabarczyk &copy; 2023</p>
-					<A HREF="index.html"> Wróć </A>
+					<A HREF="menu.html"> Wróć </A>
 		</body>
 </html>
