--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 	<html>
 		<head>
  			<meta charset="utf-8">
- 			<title> <p align="center"> <font color="red" size="50" face="Arial"> ZOO SKLEP </font> </p><i></title>
+ 			<title>ZOO SKLEP</title>
 
 		</head>
 		<body>	
