--- a/tabela.html
+++ b/tabela.html
@@ -8,6 +8,6 @@
 		<body>
 	Tutaj będzie tabela<br>	
 <p>Autor: Artur Grabarczyk &copy; 2023</p>
-		<A HREF="index.html"> Wróć </A>
+		<A HREF="menu.html"> Wróć </A>
 		</body>
 </html>
