--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,8 @@
   <A HREF="tabela.html">do tabeli</A><br>	
   <A HREF="poczta.html">do poczty</A><br>
 
+			<IMG SRC="logotyp.png" ALIGN=center>
+			
  <ul class="square-list">
     <li>Składniki karmy dla zwierząt domowych.</li>
     <li>Akcesoria i zabawki dla psów, kotów, ptaków i innych zwierząt.</li>
