--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 			  <!-- Data sprawdzianu: 2023-10-25, Uczeń: Grabarczyk -->
 		</head>
 		<body>	
-
+	 <style>		
+ {
+            background-color: green;
+        }
+    </style>
 	<A HREF="menu.html">do menu</A><br>		
 <p>Autor: Artur Grabarczyk &copy; 2023</p>
 </body>
