--- a/poczta.html
+++ b/poczta.html
@@ -9,7 +9,13 @@
 	<br><br><br><br>	
 <A href ="mailto:grabarczykartur18@gmail.com">poczta_sklep_zoologiczny</A>
 			<br><br><br><br>
-
+  <style>
+        body {
+            background-image: url('.jpg');
+            background-size:1920x1080 cover; 
+            background-repeat: no-repeat; 
+        }
+    </style>
 			<p>Autor: Artur Grabarczyk &copy; 2023</p>
 					<A HREF="menu.html"> Wróć </A>
 		</body>
