--- a/poczta.html
+++ b/poczta.html
@@ -11,7 +11,7 @@
 			<br><br><br><br>
   <style>
         body {
-            background-image: url('.jpg');
+            background-image: url('zwierzęta.jpeg');
             background-size:1920x1080 cover; 
             background-repeat: no-repeat; 
         }
