--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
   <A HREF="tabela.html">do tabeli</A><br>	
   <A HREF="poczta.html">do poczty</A><br>
 
-			<IMG SRC="Grabarczyk_Logo.png" ALIGN=center>
+			<IMG SRC="Grabarczyk_Logo.png" ALIGN=center BORDER=6px solid #ffff00; WIDTH=700 HEIGHT=200>
 			
  <ul class="square-list">
     <li>Składniki karmy dla zwierząt domowych.</li>
