--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
  			<title>ZOO SKLEP</title>
 
 		</head>
-		<body>	
+		<body style="background-color:green;">	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 	<A HREF="formularz.html">do formluarza</A><br>			
   <A HREF="tabela.html">do tabeli</A><br>	
