--- a/poczta.html
+++ b/poczta.html
@@ -11,7 +11,7 @@
 			<br><br><br><br>
      <style>
         body {
-            background-image: url('zwierzęta.jpeg');
+            background-image: url('kot.jpg');
             background-size: 1980x1080cover;
             background-repeat: no-repeat; 
         }
