--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  			<title> Wykonał Grabarczyk </title>
 			  <!-- Data sprawdzianu: 2023-10-25, Uczeń: Grabarczyk -->
 		</head>
-		<body>	
+		<bodystyle="background-color:purple;">	
 	 <style>		
  {
             background-color: green;
