--- a/formularz.html
+++ b/formularz.html
@@ -5,7 +5,7 @@
 			<meta charset="utf-8">
 			<title> Formularz_Grabarczyk</title>
 		</head>
-		<body>
+		<body style="background-color:red;">
 	Tutaj będzie formularz<br>	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 		<A HREF="menu.html"> Wróć </A>
