--- a/tabela.html
+++ b/tabela.html
@@ -5,7 +5,7 @@
 			<meta charset="utf-8">
 			<title> Tabela_Grabarczyk</title>
 		</head>
-		<body>
+		<body style="background-color:yellow;">
 	Tutaj będzie tabela<br>	
 <p>Autor: Artur Grabarczyk &copy; 2023</p>
 		<A HREF="menu.html"> Wróć </A>
