--- a/menu.html
+++ b/menu.html
@@ -21,5 +21,6 @@
     <li>Preparaty i leki weterynaryjne.</li>
     <li>Konsultacje i porady dotyczące opieki nad zwierzętami.</li>
   </ul>			
+<A HREF="index.html"> Wróć </A>			
 </body>
 	</html>
