--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 	<html>
 		<head>
  			<meta charset="utf-8">
- 			<title>ZOO SKLEP</title>
+ 			<title style="color: red; text-align: center; font-style: italic;">ZOO SKLEP</title>
 
 		</head>
 		<body style="background-color:green;">	
