--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,8 @@
 	<html>
 		<head>
  			<meta charset="utf-8">
- 			<title style="color: red; text-align: center; font-style: italic;">ZOO SKLEP</title>
-
+ 			<title>ZOO SKLEP</title>
+			<p style="color: red; text-align: center; font-style: italic;">ZOO SKLEP</p>
 		</head>
 		<body style="background-color:green;">	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
