--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 		<head>
  			<meta charset="utf-8">
  			<title>ZOO SKLEP</title>
-			<p style="color: red; text-align: center; font-style: italic;">ZOO SKLEP</p>
+			<p align="center"> <font color="red" size="50" face="italic"> ZOO SKLEP </p> </font>
 		</head>
 		<body style="background-color:green;">	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
