--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             background-color: green;
         }
     </style>
-	<A HREF="menu.html">do menu</A><br>		
+	<A HREF="menu.html">do menu</A><br>	
+	<A HREF="test.html">do menu</A><br>
 <p>Autor: Artur Grabarczyk &copy; 2023</p>
 </body>
 	</html>
