--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,57 @@
  			<meta charset="utf-8">
  			<title>ZOO SKLEP</title>
 			<p align="center"> <font color="red" size="50" face="italic"> ZOO SKLEP </p> </font>
+			<style>
+  /* Style dla tytułu */
+  .title {
+    font-family: Arial, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+    color: #336699;
+    text-align: center;
+    text-decoration: underline;
+  }
+
+  /* Style dla opisu sklepu */
+  .description {
+    font-family: 'Times New Roman', serif;
+    font-size: 18px;
+    font-weight: normal;
+    color: #990000;
+    text-align: left;
+  }
+
+  /* Style dla informacji o produkcie */
+  .product-info {
+    font-family: 'Courier New', monospace;
+    font-size: 16px;
+    font-weight: normal;
+    color: #006600;
+    text-align: right;
+  }
+
+  /* Style dla indeksu */
+  .index {
+    font-size: 12px;
+    vertical-align: super;
+  }
+</style>
 		</head>
 		<body style="background-color:green;">	
 	<p>Autor: Artur Grabarczyk &copy; 2023</p>
 	<A HREF="formularz.html">do formluarza</A><br>			
   <A HREF="tabela.html">do tabeli</A><br>	
   <A HREF="poczta.html">do poczty</A><br>
-
+			
+ <div class="title">Sklep Zoologiczny "Zwierzaki Marzeń"</div>
+  <div class="description">
+    Nasz sklep zoologiczny oferuje najwyższej jakości produkty dla Twoich pupili.
+  </div>
+  <div class="product-info">
+    <p>Najnowsze przysmaki dla psów <span style="font-weight: bold;">Dostępne teraz!</span></p>
+    <p>Znajdziesz u nas wszystko, czego potrzebuje Twój zwierzak, włącznie z karmą, zabawkami i <span style="text-decoration: underline;">akcesoriami</span>.</p>
+    <p>Zapraszamy do odwiedzenia naszego sklepu i <span class="index">sprawdzenia naszych promocji</span>.</p>
+  </div>
 			<IMG SRC="Grabarczyk_Logo.png" ALIGN=center BORDER=6px solid #ffff00; WIDTH=700 HEIGHT=200>
 			
  <ul class="square-list">
