--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
     font-family: 'Courier New', monospace;
     font-size: 16px;
     font-weight: normal;
-    color: #006600;
+    color: #CCFF00;
     text-align: right;
   }
 
